# kde2-i18n

./: CMakeLists.txt  Makefile.am  README  apply.cc  check_charsets  check_consistency  check_duplicates  check_makefiles  check_po_files  commentmerge  configure.in  createdesktop  findfiles  highscore  highscore.html  kde-i18n.spec.in  msgsplit.pl  subdirs  update_xml
CVSROOT/: checkoutlist,v  checkoutlist,v,v  commitinfo,v  commitinfo,v,v  config,v  config,v,v  cvswrappers,v  cvswrappers,v,v  editinfo,v  editinfo,v,v  history,v  loginfo,v  loginfo,v,v  modules,v  modules,v,v  notify,v  notify,v,v  rcsinfo,v  rcsinfo,v,v  taginfo,v  taginfo,v,v  verifymsg,v  verifymsg,v,v
af/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
az/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
bg/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
br/messages/: desktop.po  entry.desktop  kdelibs.po  knotify.po
bs/messages/: Makefile.am  desktop.po  entry.desktop  kdelibs.po
ca/messages/: desktop.po  entry.desktop  kdelibs.po  knotify.po
cs/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po
cy/messages/: Makefile.am  entry.desktop  kdelibs.po  knotify.po
da/data/: Makefile.am
da/data/kdegames/ktuberling/: Makefile.am
da/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
de/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
debian/: changelog  control  copyright  rules
doc-script/: README  checkDoc-cs  checkDoc-da  checkDoc-de  checkDoc-el  checkDoc-es  checkDoc-et  checkDoc-fi  checkDoc-fr  checkDoc-hu  checkDoc-it  checkDoc-ja  checkDoc-nl  checkDoc-no  checkDoc-pl  checkDoc-pt  checkDoc-ptBr  checkDoc-ro  checkDoc-ru  checkDoc-sl  checkDoc-sr  checkDoc-sv  checkDoc-zhCn  checkDoc.pm  common.pm
el/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po
en_GB/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
eo/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
es/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
et/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
eu/messages/: desktop.po  entry.desktop  kdelibs.po  knotify.po
fi/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
fr/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
ga/messages/: Makefile.am  desktop.po  entry.desktop  kdelibs.po
gl/messages/: desktop.po  entry.desktop  kdelibs.po  knotify.po
he/messages/: desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po
hr/messages/: desktop.po  entry.desktop  kdelibs.po
hu/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
id/messages/: desktop.po  entry.desktop  kdelibs.po  knotify.po
is/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
it/docs/: Makefile.am
it/messages/: Makefile.am  cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
ja/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po
ko/: convert_code
ko/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
lt/messages/: desktop.po  entry.desktop  kdelibs.po  knotify.po
lv/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  kmcop.po  knotify.po  libkscreensaver.po  ppdtranslations.po
mi/messages/: Makefile.am  desktop.po  entry.desktop  kdelibs.po
mk/messages/: desktop.po  entry.desktop  kdelibs.po  knotify.po
mt/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
nl/data/: Makefile.am
nl/data/kdegames/ktuberling/: Makefile.am
nl/messages/: cupsdconf.po  desktop.po  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
no/messages/: README  cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
no_NY/docs/: Makefile.am
no_NY/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
oc/messages/: desktop.po  entry.desktop  kdelibs.po  knotify.po
pl/docs/: Makefile.am
pl/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po
pt/docs/kdelibs/api/: Makefile.am
pt/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
pt_BR/messages/: Makefile.am  cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
ro/data/: Makefile.am
ro/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
ru/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
sk/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
sl/data/: Makefile.am
sl/messages/: cupsdconf.po  desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po  ppdtranslations.po
sr/messages/: desktop.po  entry.desktop  kdelibs.po  knotify.po  libkscreensaver.po
sv/messages/: cupsdconf.po  desktop.po  (+5 more)
templates/: cupsdconf.pot  desktop.pot  kdelibs.pot  knotify.pot  libkscreensaver.pot  ppdtranslations.pot
(+18019 files in other folders)
