cmake_minimum_required(VERSION 3.0)
project(kde2-i18n)
find_package(kdelibs2 REQUIRED)

function(install_language LANGNAME)
    set(LANGPATH ${LANGNAME}/messages/)
    install(FILES
        ${LANGPATH}/charset
        ${LANGPATH}/entry.desktop
        ${LANGPATH}/flag.png
        DESTINATION "${KDE2_LOCALE}/${LANGNAME}")
endfunction()

install_language(af)
install_language(az)
install_language(bg)
install_language(br)
install_language(bs)
install_language(ca)
install_language(cy)
install_language(cs)
install_language(da)
install_language(de)
install_language(el)
install_language(en_GB)
install_language(eo)
install_language(es)
install_language(et)
install_language(eu)
install_language(fi)
install_language(fr)
install_language(ga)
install_language(gl)
install_language(he)
install_language(hr)
install_language(hu)
install_language(id)
install_language(is)
install_language(it)
install_language(ja)
install_language(ko)
install_language(lt)
install_language(lv)
install_language(mi)
install_language(mk)
install_language(mt)
install_language(nl)
install_language(no)
install_language(no_NY)
install_language(oc)
install_language(pl)
install_language(pt)
install_language(pt_BR)
install_language(ro)
install_language(ru)
install_language(sk)
install_language(sl)
install_language(sr)
install_language(sv)
install_language(ta)
install_language(th)
install_language(tr)
install_language(uk)
install_language(vi)
install_language(wa)
install_language(xh)
install_language(zh_CN.GB2312)
install_language(zh_TW.Big5)
