
# add here all files
data_DATA = mund.wav oerering.wav hat.wav cigar.wav \
	solbriller.wav briller.wav politiskilt.wav kartoffelfyr.wav \
	ur.wav overskaeg.wav naese.wav sloejfe.wav oeje.wav \
	oere.wav slips.wav oejenbryn.wav

# this is the directory, where all datas are installed
# you have given the datas in data_DATA
datadir = $(kde_datadir)/ktuberling/sounds/da

