# add here all files
data_DATA = horloge.wav  oor.wav     ster.wav aardappelmannetje.wav \
	 mond.wav oorbel.wav strik.wav bril.wav \
	neus.wav sigaar.wav wenkbrauw.wav hoed.wav \
	 oog.wav snor.wav zonnebril.wav

# this is the directory, where all datas are installed
# you have given the datas in data_DATA
datadir = $(kde_datadir)/ktuberling/sounds/nl

